methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:2: error: value Blue is not a member of object java.awt.Color
  var color:Color = Color.Blue
                          ^